# wc-clone

./: CMakeLists.txt  README.md  vcpkg.json
include/: definitions.hpp  wc.hpp
src/: main.cpp  wc.cpp
tests/: CMakeLists.txt  wc_test.cpp
